<resources>
    <!--commons-->
    <string name="calcular_area">Calcular area</string>
    <string name="ingresar_altura">ingresar altura</string>

    <!--acitity_main-->
    <string name="app_name">CalcuArea</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="main_msg">by: Dante Luque :D</string>

    <!--acitity_menu-->
    <string name="triangulo">TRIANGULO</string>
    <string name="trapecio">TRAPECIO</string>
    <string name="rectangulo">RECTANGULO</string>
    <string name="circulo">CIRCULO</string>
    <string name="rombo">ROMBO</string>

    <!--acitity_triangulo-->
    <string name="ingresar_base">Ingresar base</string>

    <!--acitity_trapecio-->
    <string name="ingresar_base_mayor">Ingresar base mayor</string>
    <string name="ingresar_base_menor">ingresar base menor</string>

    <!--acitity_circulo-->
    <string name="ingresar_radio">Ingresar radio</string>

    <!--acitity_rombo-->
    <string name="ingresar_diagonal_mayor">Ingresar diagonal mayor</string>
    <string name="ingresar_diagonal_menor">ingresar diagonal menor</string>
</resources>