<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.Rombo"
    android:background="@android:color/white"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/left_arrow"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Rombo" />

    <EditText
        android:id="@+id/et_diagonal_mayor"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/ingresar_diagonal_mayor"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_diagonal_mayor"
        app:layout_constraintTop_toBottomOf="@+id/img_rombo" />

    <EditText
        android:id="@+id/et_diagonal_menor"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/ingresar_diagonal_menor"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_diagonal_menor"
        app:layout_constraintTop_toBottomOf="@+id/et_diagonal_mayor" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:onClick="hallarAreaRombo"
        android:text="@string/calcular_area"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_formula" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="Resultado:"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagonal_menor" />

    <ImageView
        android:id="@+id/img_rombo"
        android:layout_width="190dp"
        android:layout_height="171dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_diagonal_mayor"
        android:layout_width="25dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="D:"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_rombo" />

    <TextView
        android:id="@+id/tv_diagonal_menor"
        android:layout_width="25dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="d:"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diagonal_mayor" />

    <ImageView
        android:id="@+id/img_demo_rombo"
        android:layout_width="178dp"
        android:layout_height="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/demorombo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_rombo" />

    <TextView
        android:id="@+id/tv_formula"
        android:layout_width="178dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="(D.d)/2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_demo_rombo" />
</androidx.constraintlayout.widget.ConstraintLayout>